--- a/index.html
+++ b/index.html
@@ -5,15 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a541b204e2.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="stage-wrapper">
-            <div class="player-card"></div>
+        <div class="player-podium">
+            <div class="player-card">
+                <div class="pfp-wrapper">
+                    <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" class="pfp">
+                       <div class="position-wrapper"></div>
+                    <div class="position-text">1</div>
+                </div>
+                <div class="card-text">
+                    <div class="card-name">Amumu</div>
+                    <div class="card-elo">2000</div>
+                    <div class="card-wl">55/0</div>
+                </div>
+                <div class="champs-container">
+                    <p>Recently-played:</p>
+                    <div class="recent-champs">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                    </div>
+                </div>
+            </div>
+            <div class="player-card peak">
+                <div class="pfp-wrapper">
+                    <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" class="pfp">
+                    <div class="position-wrapper"></div>
+                    <div class="position-text">1</div>
+                </div>
+                
+                <div class="card-text">
+                    <div class="card-name">Amumu</div>
+                    <div class="card-elo">2000</div>
+                    <div class="card-wl">55/0</div>
+                </div>
+                <div class="champs-container">
+                    <p>Recently-played:</p>
+                    <div class="recent-champs">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                    </div>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="pfp-wrapper">
+                    <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" class="pfp">
+                    <div class="position-wrapper"></div>
+                    <div class="position-text">1</div>
+
+                </div>
+                <div class="card-text">
+                    <div class="card-name">Amumu</div>
+                    <div class="card-elo">2000</div>
+                    <div class="card-wl">55/0</div>
+                </div>
+                <div class="champs-container">
+                    <p>Recently-played:</p>
+                    <div class="recent-champs">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                        <img src="http://ddragon.leagueoflegends.com/cdn/13.11.1/img/champion/Amumu.png" alt="" class="recent-champ">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="leaderboard">
-            <div class="player-row"></div>
+            <div class="main">
+                <div class="empty"></div>
+                <div class="summoner-name">SUMMONERS</div>
+                <div class="empty"></div>
+                <div class="win-loss">W/L</div>
+                <div class="league-points">POINTS</div>
+            </div>
+            <div class="summoners"></div>
         </div>
     </div>
     <script src="script.js"></script>
