--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="card-wl">80/50</div>
                 </div>
                 <div class="champs-container">
-                    <p>Recently-played:</p>
+                    <p>Recently played:</p>
                     <div class="recent-champs">
                         <img src="champ7.jpg">
                         <img src="champ8.jpg">
